Aks-gateway/3-deployment-ingress-netsample.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingresscpr
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mynetsample
                port: 
                  number: 80
