Aks-gateway/ingress-path-netapp-clusterIp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mynetsample-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mynetsample
  template:
    metadata:
      labels:
        app: mynetsample
    spec:
            containers:
            - name: mynetsample
              image: dguncetdiverse/mynetapp
              ports:
              - containerPort: 80
              resources:
                limits:
                  cpu: "0.5"
                  memory: "512Mi"
                requests:
                  cpu: "0.1"
                  memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: mynetsample
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: mynetsample
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mynetsample
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          service:
            name: mynetsample
            port:
              number: 8080
        pathType: Exact
